[package]
name = "rsomics-bam-view"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "View, filter, and convert SAM/BAM/CRAM alignments — Rust port of samtools view"

[[bin]]
name = "rsomics-bam-view"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
noodles = { workspace = true, features = ["sam", "bam", "cram", "core", "bgzf"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
