[package]
name = "rsomics-bam-view"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "View, filter, and convert SAM/BAM/CRAM alignments — Rust port of samtools view"

[[bin]]
name = "rsomics-bam-view"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noodles = { version = "0.110", features = ["sam", "bam", "cram", "core", "bgzf"]  }

[dev-dependencies]
tempfile = "3"

